tests/ui/lexer/lex-bad-octal-literal.rs
fn main() {
    0o18; //~ ERROR invalid digit for a base 8 literal
    0o1234_9_5670;  //~ ERROR invalid digit for a base 8 literal
}

// ferrocene-annotations: fls_2ed4axpsy9u0
// Integer Literals
